add permission set - gerenciamento perm

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -23,6 +23,14 @@
 		<name>Layout</name>
 	</types>
 	<types>
+		<members>FAT_Perm_Set</members>
+		<name>PermissionSet</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>Profile</name>
+	</types>
+	<types>
 		<members>House__c.Exibe_Mapa</members>
 		<members>House__c.Sell_House</members>
 		<name>QuickAction</name>
